@@ -1,8 +1,9 @@
 package com.jazzify.backend.domain.user.service;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.jspecify.annotations.NullMarked;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -28,7 +29,7 @@ public class CustomUserDetailsService implements UserDetailsService {
 		return new org.springframework.security.core.userdetails.User(
 			user.getUsername(),
 			user.getPassword(),
-			Collections.emptyList()
+			List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
 		);
 	}
 }
